kubernetes/kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: voting-booth
  name: voting-booth-service
  namespace: voting-booth
spec:
  ports:
  - name: 4201-to-4201-tcp
    port: 4201
    protocol: TCP
    targetPort: 4201
  selector:
    app: voting-booth
  type: ClusterIP
