kubernetes/kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-booth-ingress
  namespace: voting-booth
  labels:
    app: voting-booth
  annotations:
    kubernetes.io/ingress.class: nginx
    # Tell cert-manager to create an SSL certificate via LetsEncrypt
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'True'
spec:
  rules:
    - host: voting-booth.dokube.profortool.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: voting-booth-service
                port:
                  number: 4201
  tls:
    - secretName: voting-booth-certificate
      hosts:
        - voting-booth.dokube.profortool.com
